# ai4os-fedllm-medical-v2

./: README.md  pyproject.toml
ai4os_fedllm_medical/: __init__.py  client_app.py  dataset.py  fedavgopt.py  models.py  server_app.py  strategy.py
flowertune-eval-medical/benchmarks/: acc_careqa_fl.txt  acc_medmcqa_fl.txt  acc_medqa_fl.txt  acc_pubmedqa_fl.txt  generation_medmcqa_fl.jsonl  generation_medqa_fl.jsonl  generation_pubmedqa_fl.jsonl
flowertune-eval-medical/peft_5/: README.md  adapter_config.json
